publishing awesome pages 1596559703117

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h2> BIG DREAM</h2>
       <h4> Become a web developer </h4>
       <p> I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make a simple website. My goal is to build 3 websites and learn advanced topics. </p>
-     <a class="primary-btn" href="#"> Email: peter.parker@gmail.com </a>
+     <a class="primary-btn" Style="color:white ; background-color:#8845f4" ;border--raduius:20px href="#"> Email: as.Udoy2@gmail.com </a>
 </div>
         
   </section>
